--- a/sample/index.html
+++ b/sample/index.html
@@ -1,44 +1,6 @@
-<!doctype html>
-<html class="no-js" lang="">
-
-<head>
-  <meta charset="utf-8">
-  <title></title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <meta property="og:title" content="">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
-
-  <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="icon.png">
-  <!-- Place favicon.ico in the root directory -->
-
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css">
-
-  <meta name="theme-color" content="#fafafa">
-</head>
-
-<body>
-  <p><a onClick="sound();"><img src="./taiko.jpg" width="280" height="80" alt="クリックすると音が鳴ります。" title="クリックすると音が鳴ります。"></a></p>
- 
-  <!-- 音声ファイルの読み込み 9〜10行目にURLを指定 -->
-  <audio id="sound-file" preload="auto">
-  
-    <source src="./don.wav" type="audio/wav">
-  </audio>
-  
-  
-  <HR style="margin: 3em 0 ;">
-  
-  
-  
-  <p style="text-align:center"><a href="https://syncer.jp/html5-javascript-hello-button">配布元: Syncer</a></p>
-  
-
-</body>
-
-</html>
+<div class="mainview">
+  <h2>touch-action の実装</h2>
+  <p>この要素上でパンすると普通にスクロールします</p>
+  <p class="touch_action_none">この要素上でパンしてもスクロールしません。</p>
+  <p>"touch-action:none" のスタイルを当てた要素上ではブラウザ由来のタッチ操作を全て無効にできます。</p>
+</div>
