--- a/sample/index.html
+++ b/sample/index.html
@@ -3,7 +3,7 @@
  <h2>touch-action の実装</h2>
   <p>この要素上でパンすると普通にスクロールします</p>
  <div style="padding: 10px; margin-bottom: 10px; border: 5px double #333333;">
-   
+   gdfkgsjohjgieigjsiergjiqejigjrejgirejitgj
   
    <p class="touch_action_none">この要素上でパンしてもスクロールしません。</p>
    
