--- a/sounds-multi.html
+++ b/sounds-multi.html
@@ -19,14 +19,17 @@
 <h1 style="text-align:center;color:#d31515;">癖になる音でタピオカ君と踊ろう</h1>
 
 
-
 	<p><a href="#" class="sounds" data-file="kan">缶</a></p>
 	<p><a href="#" class="sounds" data-file="ice">氷</a></p>
     <p><a href="#" class="sounds" data-file="soda">炭酸</a></p>
+	<p><a href="#" class="sounds" data-file="wave">波</a></p>
 
-	
 
-
+	<p><a href="#" class="sounds" data-file="fastener">ファスナー</a></p>
+    <p><a href="#" class="sounds" data-file="pet">ペットボトル</a></p>
+	<p><a href="#" class="sounds" data-file="spray">スプレー</a></p>
+	<p><a href="#" class="sounds" data-file="tomato">ケチャップ</a></p>
+  
 
 
 
@@ -39,4 +42,3 @@
 
 </body>
 </html>
-
