--- a/sounds-multi.html
+++ b/sounds-multi.html
@@ -18,12 +18,12 @@
 
 <h1 style="text-align:center;color:#d31515;">癖になる音でタピオカ君と踊ろう</h1>
 
-
+<div class="flex">
 	<p><a href="#" class="sounds" data-file="kan">缶</a></p>
 	<p><a href="#" class="sounds" data-file="ice">氷</a></p>
     <p><a href="#" class="sounds" data-file="soda">炭酸</a></p>
 	<p><a href="#" class="sounds" data-file="wave">波</a></p>
-
+</div>
 
 	<p><a href="#" class="sounds" data-file="fastener">ファスナー</a></p>
     <p><a href="#" class="sounds" data-file="pet">ペットボトル</a></p>
