--- a/sounds-multi.html
+++ b/sounds-multi.html
@@ -24,13 +24,13 @@
     <p><a href="#" class="sounds" data-file="soda">炭酸</a></p>
 	<p><a href="#" class="sounds" data-file="wave">波</a></p>
 </div>
-
+<div class="flex">
 	<p><a href="#" class="sounds" data-file="fastener">ファスナー</a></p>
     <p><a href="#" class="sounds" data-file="pet">ペットボトル</a></p>
 	<p><a href="#" class="sounds" data-file="spray">スプレー</a></p>
 	<p><a href="#" class="sounds" data-file="tomato">ケチャップ</a></p>
-  
 
+</div>
 
 
 
