--- a/sounds-multi.html
+++ b/sounds-multi.html
@@ -26,9 +26,9 @@
 </div>
 <div class="flex">
 	<p><a href="#" class="sounds" data-file="fastener">ファスナー</a></p>
-    <p><a href="#" class="sounds" data-file="pet">ペットボトル</a></p>
+    <p><a href="#" class="sounds" data-file="pet">ペット</a></p>
 	<p><a href="#" class="sounds" data-file="spray">スプレー</a></p>
-	<p><a href="#" class="sounds" data-file="tomato">ケチャップ</a></p>
+	<p><a href="#" class="sounds" data-file="tomato">チャップ</a></p>
 
 </div>
 
