--- a/sounds-multi.html
+++ b/sounds-multi.html
@@ -29,9 +29,21 @@
     <p><a href="#" class="sounds" data-file="pet">ペット</a></p>
 	<p><a href="#" class="sounds" data-file="spray">スプレー</a></p>
 	<p><a href="#" class="sounds" data-file="tomato">チャップ</a></p>
+</div>
+<div class="flex">
+	<p><a href="#" class="sounds" data-file="fastener">ファスナー</a></p>
+    <p><a href="#" class="sounds" data-file="pet">ペット</a></p>
+	<p><a href="#" class="sounds" data-file="spray">スプレー</a></p>
+	<p><a href="#" class="sounds" data-file="tomato">チャップ</a></p>
 
 </div>
+	<div class="flex">
+	<p><a href="#" class="sounds" data-file="fastener">ファスナー</a></p>
+    <p><a href="#" class="sounds" data-file="pet">ペット</a></p>
+	<p><a href="#" class="sounds" data-file="spray">スプレー</a></p>
+	<p><a href="#" class="sounds" data-file="tomato">チャップ</a></p>
 
+</div>
 
 
 <!-- JavaScriptの読み込み -->
