--- a/sounds-multi.html
+++ b/sounds-multi.html
@@ -18,6 +18,10 @@
 
 <h1 style="text-align:center;color:#d31515;">癖になる音でタピオカ君と踊ろう</h1>
 
+<p>
+	<img src="images/ue.jpg" name="area1" alt="説明図">
+	</p>
+
 <div class="flex">
 	<p><a href="#" class="sounds" data-file="kan">缶</a></p>
 	<p><a href="#" class="sounds" data-file="ice">氷</a></p>
@@ -29,6 +33,7 @@
     <p><a href="#" class="sounds" data-file="pet">ペット</a></p>
 	<p><a href="#" class="sounds" data-file="spray">スプレー</a></p>
 	<p><a href="#" class="sounds" data-file="tomato">チャップ</a></p>
+
 </div>
 <div class="flex">
 	<p><a href="#" class="sounds" data-file="fastener">ファスナー</a></p>
@@ -37,14 +42,13 @@
 	<p><a href="#" class="sounds" data-file="tomato">チャップ</a></p>
 
 </div>
-	<div class="flex">
+<div class="flex">
 	<p><a href="#" class="sounds" data-file="fastener">ファスナー</a></p>
     <p><a href="#" class="sounds" data-file="pet">ペット</a></p>
 	<p><a href="#" class="sounds" data-file="spray">スプレー</a></p>
 	<p><a href="#" class="sounds" data-file="tomato">チャップ</a></p>
 
 </div>
-
 
 <!-- JavaScriptの読み込み -->
 <script src="sounds-multi.js"></script>
