--- a/sounds-multi.html
+++ b/sounds-multi.html
@@ -19,7 +19,7 @@
 <h1 style="text-align:center;color:#d31515;">癖になる音でタピオカ君と踊ろう</h1>
 
 <p>
-	<img src="images/ue.jpg" name="area1" alt="説明図">
+	<img src="images/ue.jpg" name="area1" width="10%" >
 	</p>
 
 <div class="flex">
@@ -29,10 +29,10 @@
 	<p><a href="#" class="sounds" data-file="wave">波</a></p>
 </div>
 <div class="flex">
-	<p><a href="#" class="sounds" data-file="fastener">ファスナー</a></p>
-    <p><a href="#" class="sounds" data-file="pet">ペット</a></p>
-	<p><a href="#" class="sounds" data-file="spray">スプレー</a></p>
-	<p><a href="#" class="sounds" data-file="tomato">チャップ</a></p>
+	<p><a href="#" class="sounds2" data-file="fastener">ファスナー</a></p>
+    <p><a href="#" class="sounds2" data-file="pet">ペット</a></p>
+	<p><a href="#" class="sounds2" data-file="spray">スプレー</a></p>
+	<p><a href="#" class="sounds2" data-file="tomato">チャップ</a></p>
 
 </div>
 <div class="flex">
