--- a/sounds-multi.html
+++ b/sounds-multi.html
@@ -15,12 +15,9 @@
 <body>
 
 
-
-<h1 style="text-align:center;color:#d31515;">癖になる音でタピオカ君と踊ろう</h1>
-
-<p>
-	<img src="images/ue.jpg" name="area1" width="10%" >
-	</p>
+<div class="class1">
+	<img src="images/ue.jpg" name=area1 width="15%" >
+</div>
 
 <div class="flex">
 	<p><a href="#" class="sounds" data-file="kan">缶</a></p>
@@ -29,25 +26,22 @@
 	<p><a href="#" class="sounds" data-file="wave">波</a></p>
 </div>
 <div class="flex">
-	<p><a href="#" class="sounds2" data-file="fastener">ファスナー</a></p>
-    <p><a href="#" class="sounds2" data-file="pet">ペット</a></p>
-	<p><a href="#" class="sounds2" data-file="spray">スプレー</a></p>
-	<p><a href="#" class="sounds2" data-file="tomato">チャップ</a></p>
-
+	<p><a href="#" class="sounds" data-file="fastener">ファスナ</a></p>
+	<p><a href="#" class="sounds" data-file="pet">ペット</a></p>
+    <p><a href="#" class="sounds" data-file="spray">炭酸</a></p>
+	<p><a href="#" class="sounds" data-file="tomato">チャップ</a></p>
 </div>
 <div class="flex">
-	<p><a href="#" class="sounds" data-file="fastener">ファスナー</a></p>
-    <p><a href="#" class="sounds" data-file="pet">ペット</a></p>
-	<p><a href="#" class="sounds" data-file="spray">スプレー</a></p>
-	<p><a href="#" class="sounds" data-file="tomato">チャップ</a></p>
-
+	<p><a href="#" class="sounds" data-file="rain">雨</a></p>
+	<p><a href="#" class="sounds" data-file="huurin">風鈴</a></p>
+    <p><a href="#" class="sounds" data-file="suiteki">水滴</a></p>
+	<p><a href="#" class="sounds" data-file="iki">ため息</a></p>
 </div>
 <div class="flex">
-	<p><a href="#" class="sounds" data-file="fastener">ファスナー</a></p>
-    <p><a href="#" class="sounds" data-file="pet">ペット</a></p>
-	<p><a href="#" class="sounds" data-file="spray">スプレー</a></p>
-	<p><a href="#" class="sounds" data-file="tomato">チャップ</a></p>
-
+	<p><a href="#" class="sounds" data-file="potato">ポテチ</a></p>
+	<p><a href="#" class="sounds" data-file="egg">卵</a></p>
+    <p><a href="#" class="sounds" data-file="patipati">パチパチ</a></p>
+	<p><a href="#" class="sounds" data-file="men">麺</a></p>
 </div>
 
 <!-- JavaScriptの読み込み -->
