--- a/sounds-multi.html
+++ b/sounds-multi.html
@@ -19,30 +19,34 @@
 	<img src="images/ue.jpg" name=area1 width="15%" >
 </div>
 
-<div class="flex">
-	<p><a href="#" class="sounds" data-file="kan">缶</a></p>
-	<p><a href="#" class="sounds" data-file="ice">氷</a></p>
-    <p><a href="#" class="sounds" data-file="soda">炭酸</a></p>
-	<p><a href="#" class="sounds" data-file="wave">波</a></p>
-</div>
-<div class="flex">
-	<p><a href="#" class="sounds" data-file="fastener">ファスナ</a></p>
-	<p><a href="#" class="sounds" data-file="pet">ペット</a></p>
-    <p><a href="#" class="sounds" data-file="spray">炭酸</a></p>
-	<p><a href="#" class="sounds" data-file="tomato">チャップ</a></p>
-</div>
-<div class="flex">
-	<p><a href="#" class="sounds" data-file="rain">雨</a></p>
-	<p><a href="#" class="sounds" data-file="huurin">風鈴</a></p>
-    <p><a href="#" class="sounds" data-file="suiteki">水滴</a></p>
-	<p><a href="#" class="sounds" data-file="iki">ため息</a></p>
-</div>
-<div class="flex">
-	<p><a href="#" class="sounds" data-file="potato">ポテチ</a></p>
-	<p><a href="#" class="sounds" data-file="egg">卵</a></p>
-    <p><a href="#" class="sounds" data-file="patipati">パチパチ</a></p>
-	<p><a href="#" class="sounds" data-file="men">麺</a></p>
-</div>
+<table width=100%>
+<tr>
+	<td width=25%><a href="#" class="sounds" data-file="kan">缶</a></td>
+	<td width=25%><a href="#" class="sounds" data-file="ice">氷</a></td>
+  <td width=25%><a href="#" class="sounds" data-file="soda">炭酸</a></td>
+	<td width=25%><a href="#" class="sounds" data-file="wave">波</a></td>
+</tr>
+<tr>
+	<td width=25%><a href="#" class="sounds2" data-file="fastener">ファスナ</a></td>
+	<td width=25%><a href="#" class="sounds2" data-file="pet">ペット</a></td>
+  <td width=25%><a href="#" class="sounds2" data-file="spray">スプレー</a></td>
+	<td width=25%><a href="#" class="sounds2" data-file="tyappu">チャップ</a></td>
+</tr>
+<tr>
+	<td width=25%><a href="#" class="sounds3" data-file="rain">雨</a></td>
+	<td width=25%><a href="#" class="sounds3" data-file="huurin">風鈴</a></td>
+  <td width=25%><a href="#" class="sounds3" data-file="suiteki">水滴</a></td>
+	<td width=25%><a href="#" class="sounds3" data-file="iki">溜息</a></td>
+</tr>
+<tr>
+	<td width=25%><a href="#" class="sounds4" data-file="potato">ポテチ</a></td>
+	<td width=25%><a href="#" class="sounds4" data-file="egg">卵</a></td>
+  <td width=25%><a href="#" class="sounds4" data-file="patipati">パチパチ</a></td>
+	<td width=25%><a href="#" class="sounds4" data-file="men">麺</a></td>
+</tr>
+</table>
+
+
 
 <!-- JavaScriptの読み込み -->
 <script src="sounds-multi.js"></script>
