--- a/sounds-multi.html
+++ b/sounds-multi.html
@@ -3,21 +3,15 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="robots" content="noindex,nofollow">
-
 		<!-- ビューポートの設定 -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
 		<!-- スタイルシートの読み込み -->
 		<link href="sounds-multi.css" rel="stylesheet">
-
-		
 	</head>
 <body>
-
 <div class="class1">
 	<img src="images/ue.jpg" name=area1 width="50%" >
 </div>
-
 <table width=100%>
 <tr>
 	<td width=25%><a href="#" class="sounds" data-file="kan">缶</a></td>
@@ -44,14 +38,114 @@
 	<td width=25%><a href="#" class="sounds4" data-file="men">麺</a></td>
 </tr>
 </table>
-
-
-
 <!-- JavaScriptの読み込み -->
 <script src="sounds-multi.js"></script>
-
-
-
-
+<!-- play by keyboard (2021.02.13)
+	for example
+  Left     Right
+	a s d f  j k l ;
+	z x c v  m , . /
+-->
+<script>
+	let audio_kan       = new Audio('./kan.wav');
+	let audio_ice       = new Audio('./ice.wav');
+	let audio_soda      = new Audio('./soda.wav');
+	let audio_wave      = new Audio('./wave.wav');
+	let audio_fastener  = new Audio('./fastener.wav');
+	let audio_pet       = new Audio('./pet.wav');
+	let audio_spray     = new Audio('./spray.wav');
+	let audio_tyappu    = new Audio('./tyappu.wav');
+	let audio_rain      = new Audio('./rain.wav');
+	let audio_huurin      = new Audio('./huurin.wav');
+	let audio_suiteki      = new Audio('./suiteki.wav');
+	let audio_iki = new Audio('./iki.wav');
+	let audio_potato      = new Audio('./potato.wav');
+	let audio_egg      = new Audio('./egg.wav');
+	let audio_patipati = new Audio('./patipati.wav');
+	let audio_men = new Audio('./men.wav');
+	
+	window.onkeydown = function(e) {
+		if (e.key === 'a') {
+			audio_kan.currentTime = 0;
+			audio_kan.play();
+			document.area1.src = "images/ue.jpg";
+		}
+		if (e.key === 's') {
+			audio_ice.currentTime = 0;
+			audio_ice.play();
+			document.area1.src = "images/sita.jpg"
+		}
+		if (e.key === 'd') {
+			audio_soda.currentTime = 0;
+			audio_soda.play();
+			document.area1.src = "images/migi.jpg";
+		}
+		if (e.key === 'f') {
+			audio_wave.currentTime = 0;
+			audio_wave.play();
+			document.area1.src = "images/hidari.jpg"
+		}
+		if (e.key === 'j') {
+			audio_fastener.currentTime = 0;
+			audio_fastener.play();
+			document.area1.src = "images/migi.jpg";
+		}
+		if (e.key === 'k') {
+			audio_pet.currentTime = 0;
+			audio_pet.play();
+			document.area1.src = "images/hidari.jpg"
+		}
+		if (e.key === 'l') {
+			audio_spray.currentTime = 0;
+			audio_spray.play();
+			document.area1.src = "images/sita.jpg";
+		}
+		if (e.key === ';') {
+			audio_tyappu.currentTime = 0;
+			audio_tyappu.play();
+			document.area1.src = "images/ue.jpg"
+		}
+		if (e.key === 'z') {
+			audio_rain.currentTime = 0;
+			audio_rain.play();
+			document.area1.src = "images/hidari.jpg";
+		}
+		if (e.key === 'x') {
+			audio_huurin.currentTime = 0;
+			audio_huurin.play();
+			document.area1.src = "images/ue.jpg"
+		}
+		if (e.key === 'c') {
+			audio_suiteki.currentTime = 0;
+			audio_suiteki.play();
+			document.area1.src = "images/sita.jpg";
+		}
+		if (e.key === 'v') {
+			audio_iki.currentTime = 0;
+			audio_iki.play();
+			document.area1.src = "images/migi.jpg"
+		}
+		if (e.key === 'm') {
+			audio_potato.currentTime = 0;
+			audio_potato.play();
+			document.area1.src = "images/sita.jpg";
+		}
+		if (e.key === ',') {
+			audio_egg.currentTime = 0;
+			audio_egg.play();
+			document.area1.src = "images/hidari.jpg"
+		}
+		if (e.key === '.') {
+			audio_patipati.currentTime = 0;
+			audio_patipati.play();
+			document.area1.src = "images/ue.jpg";
+		}
+		if (e.key === '/') {
+			audio_men.currentTime = 0;
+			audio_men.play();
+			document.area1.src = "images/migi.jpg"
+		}
+	}
+</script>
 </body>
 </html>
